﻿NeteXt'73 Changelog
-------------------------------------

v1.0.94
-	zmiana sposobu uruchamiania programu
-	przyspieszenie listowania kerneli
-	zmiana wywoływania okna o NeteXt'73
-	drobne poprawki kodu
-	zastąpienie pliku NeteXt73_root procedurą o tej samej nazwie
v1.0.93
-	poprawka sprawdzania czy jest zasilacz
-	poprawka dla ponownego uruchamiania programu
-	poprawka listowania kerneli
-	poprawka dla uruchamiania listy kerneli standard
v1.0.92
-	pojedynczy dymek dla możliwych aktualizacji
-	pobieranie inforamcji o możliwych aktualizacja przed startem programu
-	pobieranie sum kontrolnych przed startem programu
-	zmiana kolejności instalacji aktualizacji
v1.0.91
-	najnowsze logi z instalacji na górze
-	repozytorium owncloud-server
v1.0.90
-	poprawka dla instalacji kerneli standard - pierwsza instalacja
v1.0.89
-	zastąpnienie sterowników radeona mesą 3D
-	usunięcie z logów radeona
-	poprawki kodu i tłumaczeń
v1.0.88
-	koniec wsparcia redeon dla 14.04
-	poprawka tłumaczeń
v1.0.87
-	zmiana ikon
v1.0.86
-	drobne poprawki
v1.0.85
-	przebudowa wyników dla testów HDD/SSD
-	klawisz trim gdy Trim supported
v1.0.84
-	HDD monitor
-	trim
v1.0.83
-	tester HDD/SSD
-	speed test HDD/SSD
-	BadSector TEST
-	zmiana wyglądu okna testera HDD
v1.0.82
-	nowa ikona dla skylake
-	dodanie ikony dla kabylake
-	drobne zmiany kolejności ikon menu głównego
-	nowe ikony
v1.0.81
-	process killer - brak środkowania klawiszy
-	przywrócenie tabeli wyników testów pamięci
-	uproszczenie wyboru kerneli standard
-	instalacja kerneli z dysku tylko dla userów premium
-	dostosowanie makefile
-	zmiany ikon
v1.0.80
-	czyszczenie informacji przy odpaleniu z terminala
v1.0.79
-	wsparcie dla Lite Linux 3.2
-	zmiany w okienku kernel standard
-	dymek sukerujący wersję kernela dla Intela
-	rozpoznawanie amd standard i intel standard - rozdzielenie okien
-	zmiany w makefile
v1.0.78
-	wsparcie dla Mint 18.1 Serena
-	poprawka apm_fix
v1.0.77
-	apm fix dla nv
v1.0.76
-	przebudowa instalatora NV
v1.0.75