@@ -233,7 +233,7 @@ rm ./index.html -f
 
 please_wait(){
 if [ "$1" = "kill" ]; then
-	ps aux | awk '$11" "$12 == "python /opt/NeteXt73/czekaj.py" { system("kill " $2) }'
+	echo "zakoncz czekaj.py" > /tmp/netext73/zakoncz.txt
 else
 	python /opt/NeteXt73/czekaj.py &
 fi
